--- a/client/landlords-client/settings/project.json
+++ b/client/landlords-client/settings/project.json
@@ -26,21 +26,23 @@
       "enable": false
     }
   },
-  "fit-height": true,
-  "fit-width": false,
+  "fit-height": false,
+  "fit-width": true,
   "group-list": [
     "default"
   ],
   "last-module-event-record-time": 1582972013116,
   "simulator-orientation": false,
   "simulator-resolution": {
-    "height": 640,
-    "width": 960
+    "width": 960,
+    "height": 640
   },
   "use-customize-simulator": true,
   "use-project-simulator-setting": false,
   "start-scene": "6d84f651-3702-4e56-9e11-07e3fb5cf4a3",
   "migrate-history": [
     "cloud-function"
-  ]
+  ],
+  "preview-port": 7456,
+  "clear-simulator-cache": true
 }
