--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+.vscode
+.git
+.idea
+.idea/modules.xml
+.idea/misc.xml
+.idea/.gitignore
+.idea/joy_v_dev.iml
+.idea/vcs.xml
+
+build
+temp
+library
+packages
+local
 # Binaries for programs and plugins
 *.exe
 *.exe~
