--- a/server/src/landlords/internal/conf/app.conf
+++ b/server/src/landlords/internal/conf/app.conf
@@ -1,5 +1,5 @@
 ﻿[dev]
-
+version = "1.0.0"
 http_port=80
 
 ;日志相关配置
@@ -8,7 +8,7 @@ log_level=debug
 
 
 [testing]
-
+version = "1.0.0"
 http_port=80
 
 ;日志相关配置
@@ -17,7 +17,7 @@ log_level=warn
 
 
 [product]
-
+version = "1.0.0"
 http_port=80
 
 ;日志相关配置
